--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 /.idea
+*.iml
 !gradle-wrapper.jar
 bin/
 .classpath
